tests/snapshots/run_wpt_conformance__litert_reduceSum_float16_3D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum.https.any.js reduceSum float16 3D tensor default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceSum { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceSumInput: f16[2, 3, 4];
  }

  nodes {
    [reduceSumOutput] = reduceSum(reduceSumInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceSumOutput; }
}
